<resources>
    <string name="app_name">Burger</string>


    <!-- Mensajes de Login y crear cuenta-->
    <string name="login">Login</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="re_contrasena">Repetir Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="siguenos">Siguenos en nuestras redes sociales</string>
    <string name="politicas">Al crear una cuenta, aceptas nuestras políticas de privacidad</string>


    <!-- Mensajes de home-->
    <string name="tienes_hambre">¿Tienes hambre?</string>
    <string name="tienes_hambre_descripcion">Estos son los platillos mas populares</string>
    <string name="tus_platillos_preferidos">¡Tus platillos preferidos!</string>
    <string name="lo_quiero">¡Lo Quiero!</string>
    <string name="anadido">Añadido</string>

    <!-- Mensajes de splash-->
    <string name="by_">by:JuanDev</string>
    <!-- Mensajes de menu-->
    <string name="nuestras_categorias">Nuestras categorías</string>

    <!-- Mensajes de order-->
    <string name="tu_pedido">Tu pedido</string>
    <string name="realizar_mi_pedido">Realizar mi pedido</string>

    <!-- Mensajes de bill-->
    <string name="tu_factura">Tu Factura</string>
    <string name="cantidad_factura">Cant</string>
    <string name="precio_factura">Total</string>

    <!-- Mensajes de details_product-->
    <string name="Hmmm">¡Hmm Yummi!</string>

    <!-- Mensajes de account-->
    <string name="mi_perfil">Mi Perfil</string>
    <string name="cambiar_imagen">Cambiar imagen</string>
    <string name="puntos">Mis puntos</string>

    <!-- Mensajes de error-->

    <string name="correo_no_valido">Correo no valido</string>
    <string name="rellena_todos_los_campos">Rellena todos los campos</string>
    <string name="las_contraseñas_no_coinciden">Las contraseñas no coinciden</string>

    <!-- menu -->
    <string name="menu_home">Home</string>
    <string name="menu_menu">Menú</string>
    <string name="menu_pedido">Pedido</string>
    <string name="menu_factura">Factura</string>
    <string name="menu_perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>