<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@color/light_gray">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="33dp"
        android:src="@drawable/logo"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app2:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:background="@color/white"
            android:textColor="@color/dark_blue"
            android:textSize="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="@string/crear_cuenta"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="@color/dark_blue"
            android:hint="@string/usuario" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="@color/dark_blue"
            android:hint="@string/contrasena" />

        <Button
            android:id="@+id/button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:text="@string/iniciar_sesion"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app2:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="25dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="@color/dark_blue"
            android:text="@string/siguenos" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app2:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="25dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:scaleType="centerInside"
            app2:srcCompat="@drawable/facebook" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:scaleType="centerInside"
            app2:srcCompat="@drawable/instagram" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>