<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-116dp"
        tools:layout_editor_absoluteY="-70dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karlabold"
            android:padding="10dp"
            android:text="@string/tienes_hambre"
            android:textColor="@color/dark_blue"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karlaregular"
            android:padding="10dp"
            android:text="@string/tienes_hambre_descripcion"
            android:textColor="@color/dark_blue"
            android:textSize="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karlabold"
            android:padding="10dp"
            android:text="@string/tus_platillos_preferidos"
            android:textColor="@color/dark_blue"
            android:textSize="30dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
        <include layout="@layout/menu_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>