<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Home"
    android:background="@color/light_gray">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-116dp"
        tools:layout_editor_absoluteY="-70dp"
        android:layout_marginBottom="60sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karlabold"
            android:padding="10dp"
            android:text="@string/mi_perfil"
            android:textColor="@color/dark_blue"
            android:textSize="30dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/white"
            android:background="@drawable/round_for_buttons"
            android:layout_margin="20sp"
            android:padding="10sp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/perfile"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:padding="10dp"
                android:text="Nombre"
                android:textColor="@color/dark_blue"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:paddingRight="15sp"
                    android:text="@string/puntos"
                    android:textColor="@color/dark_blue"
                    android:textSize="20dp" />
                <TextView
                    android:id="@+id/puntos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:text="0"
                    android:textColor="@color/orange"
                    android:textSize="20dp" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karlabold"
            android:padding="10dp"
            android:text="@string/tus_platillos_preferidos"
            android:textColor="@color/dark_blue"
            android:textSize="30dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</FrameLayout>