<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Bill"
    android:background="@color/light_gray">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_marginBottom="60sp"
        tools:layout_editor_absoluteX="-116dp"
        tools:layout_editor_absoluteY="-70dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karlabold"
            android:padding="10dp"
            android:text="@string/tu_factura"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            android:orientation="horizontal"
            android:backgroundTint="@color/orange"
            android:background="@drawable/menu_panel">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/white"
                android:padding="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="30sp"
                android:text="@string/cantidad_factura"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/white"
                android:padding="10sp"
                android:text="@string/precio_factura"
                android:textSize="25sp"/>
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_factura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray">
                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="20sp"
                    android:orientation="horizontal"
                    android:backgroundTint="@color/orange"
                    android:background="@drawable/menu_panel_lower">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:fontFamily="@font/robotomedium"
                        android:textColor="@color/white"
                        android:padding="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="30sp"
                        android:text="@string/precio_factura"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/textVTotalPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:fontFamily="@font/robotomedium"
                        android:textColor="@color/white"
                        android:padding="10sp"
                        android:text="1000"
                        android:textSize="25sp"/>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>




    </LinearLayout>

</FrameLayout>